Issue209 (#216)
* Make STREAM a RelNode with LogicalStream which allows us to remove the separate tables.
* Rework SqrlLogicalPlanConverter to streamline timestamp handling and aggregation. Add support for pulling timestamps through aggregates and joins.
* Delayed executionstage selection until DAGPlanner, using an "IDEAL" stage for analyzing script
* DAGPlanner now uses a DAG message passing algorithm to eliminate inviable execution stages and find the optimal plan

Signed-off-by: Matthias Broecheler <mbroecheler@users.noreply.github.com>